--- a/index.html
+++ b/index.html
@@ -21,9 +21,25 @@
         <p>Mostly tired and confused in life</p>
       </article>
     </main>
+    <main>
+        <h2>Educational Background</h2>
+        <p>Elementary and Junior and Senior Highschool</p>
+       <article>
+         <h3>Elementary</h3>
+         <p>Graduated at Gintilan Central School</p>
+      </article>
+      <article>
+        <h3>Senior Highschool</h3>
+        <p>Graduated at Lyceum of Cebu/p>
+      </article>
+      <article>
+        <h3>Senior Highschool</h3>
+        <p>Graduated at University of San Jose-Recoletos</p>
+      </article>
+    </main>    
+    <br>
+    <br>
     <footer>
-      <br>
-      <br>
   <p>Posted by: John Enrick Gornez</p>
   <p>Contact information: <a href="mailto:johngorns@gmail.com">someone@example.com</a>.</p>
     </footer>
